# cicd

./: CMakeLists.txt  math_utils.cpp  test_math_utils.cpp
.github/workflows/: ci.yml
